# bmstu-oop

./: .gitignore  README.md
lab_02/: CMakeLists.txt  README.md
lab_02/lab/: __list.hpp  __list_iterator.hpp  __list_node.hpp  base_iterator.hpp  base_list.hpp  exceptions.h  list.hpp  list_iterator.hpp  list_node.hpp
lab_02/tests/: CMakeLists.txt
lab_02/tests/include/: utils.h
lab_02/tests/src/: testing_append_methods.cpp  testing_constructors.cpp  testing_insert_methods.cpp  testing_iterators.cpp  testing_methods.cpp  testing_neg.cpp  testing_operators.cpp
lab_03/: CMakeLists.txt  README.md
lab_03/models/archimedean/: cuboctahedron.txt  rhombicosidodecahedron.txt  rhombicuboctahedron.txt  rhombitruncated_cuboctahedron.txt  rhombitruncated_icosidodecahedron.txt  snub_cube.txt  snub_dodecahedron.txt  truncated_cube.txt  truncated_dodecahedron.txt  truncated_icosahedron.txt  truncated_octahedron.txt  truncated_tetrahedron.txt
lab_03/models/kepler-poinsot/: great_dodecahedron.txt  great_icosahedron.txt  great_stellated_dodecahedron.txt  small_stellated_dodecahedron.txt
lab_03/models/self-intersecting snub quasi-regular/: great_dirhombicosidodecahedron.txt
lab_03/src/: CMakeLists.txt  main.cpp
lab_03/src/build_stuff/: base_model_builder.hpp  model_builder.cpp  model_builder.hpp  model_director.cpp  model_director.hpp
lab_03/src/commands/: base_command.hpp  commands.cpp  commands.hpp
lab_03/src/controller/: controller.cpp  controller.hpp
lab_04/: CMakeLists.txt  README.md
lab_04/src/: CMakeLists.txt
lab_05/: README.md  lab5.drawio
(+73 files in other folders)
